# RISC-V-gpu-sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  compare_results.py  custom_instrs.txt  run-samples.sh  run-simtight.sh
.github/workflows/: ci.yml
InHouse/: README.md
InHouse/BlockedStencil/: app.elf  code.v  data.v
InHouse/Framebuffer/: Framebuffer.cpp  Makefile  README.md  RunSim  app.elf  code.v  data.v
InHouse/MotionEst/: app.elf  code.v  data.v
InHouse/StripedStencil/: app.elf  code.v  data.v  link.ld
InHouse/ThresholdCompact/: Makefile  ThresholdCompact.cpp  app.elf
InHouse/ThresholdNaive/: Makefile  ThresholdNaive.cpp  app.elf
InHouse/VecAddCoalesced/: Makefile  VecAddCoalesced.cpp  app.elf
InHouse/VecAddUncoalesced/: Makefile  VecAddUncoalesced.cpp  app.elf
InHouse/VecGCD/: app.elf  code.v  data.v
Samples/: README.md
Samples/BitonicSortLarge/: RunSim  app.elf  code.v  data.v
Samples/BitonicSortSmall/: app.elf  code.v  data.v
Samples/Histogram/: app.elf  code.v  data.v
Samples/MatMul/: app.elf  code.v  data.v
Samples/MatVecMul/: app.elf  code.v  data.v
Samples/Reduce/: app.elf  code.v  data.v
Samples/Scan/: app.elf  code.v  data.v
Samples/SparseMatVecMul/: app.elf  code.v  data.v
Samples/Transpose/: app.elf  code.v  data.v
Samples/VecAdd/: app.elf  code.v  data.v
examples/example1/: Makefile  example1.s  kernel
examples/example2/: Makefile  example2.s  kernel
python_utils/: compare_traces.py  generate_quartiles.py  generate_table.py  plot_retry_vs_cycles.py  plot_stats.py
src/: config.hpp  custom_instrs.cpp  custom_instrs.hpp  main.cpp  mem_coalesce.cpp  mem_coalesce.hpp  mem_data.cpp  mem_data.hpp  mem_instr.cpp  mem_instr.hpp  parser.cpp  parser.hpp  pipeline.cpp  pipeline.hpp  pipeline_ats.cpp  pipeline_ats.hpp  pipeline_execute.cpp  pipeline_execute.hpp  pipeline_instr_fetch.cpp  pipeline_instr_fetch.hpp  pipeline_op_fetch.cpp  pipeline_warp_scheduler.cpp  pipeline_warp_scheduler.hpp  pipeline_writeback.cpp  pipeline_writeback.hpp  register_file.cpp  register_file.hpp  utils.cpp  utils.hpp
src/disassembler/: llvm_disasm.hpp
src/gpu/: functional_units.cpp  functional_units.hpp  pipeline.cpp  pipeline.hpp  pipeline_ats.cpp  pipeline_ats.hpp  pipeline_execute.cpp  pipeline_execute.hpp  pipeline_instr_fetch.cpp  pipeline_instr_fetch.hpp  pipeline_op_fetch.cpp  pipeline_op_fetch.hpp  pipeline_op_latch.cpp  pipeline_op_latch.hpp  pipeline_warp_scheduler.cpp  pipeline_warp_scheduler.hpp  pipeline_writeback.cpp  pipeline_writeback.hpp  register_file.cpp  register_file.hpp
src/host/: host_gpu_control.cpp  host_gpu_control.hpp  host_register_file.cpp  host_register_file.hpp
src/images/: bmp.cpp  bmp.hpp
src/mem/: data_cache.cpp  data_cache.hpp  mem_coalesce.cpp  mem_coalesce.hpp  mem_data.cpp  mem_data.hpp  mem_instr.hpp
src/stats/: stats.cpp  stats.hpp
src/trace/: trace.hpp
tests/: test_host.cpp  test_host.hpp  test_memory.cpp  test_memory.hpp  test_pipeline.cpp  test_pipeline.hpp  test_pipeline_execute.cpp  test_pipeline_execute.hpp  test_pipeline_scheduler.cpp  test_pipeline_scheduler.hpp  unit_tests.cpp
